--- a/index.html
+++ b/index.html
@@ -198,18 +198,38 @@
     <article id="inbetween" class="subsection">
       <section class="container">
         <div class="row">
-          <h1 class="jumbo text-center">design<span>#</span>code</h1>
+          <h1 class="bigquote jumbo text-center">design<span>#</span>code</h1>
           <p class="lead text-center add-top">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
-        <div class="row add-top">
-          <h2 class="span8 offset2 bigquote text-center"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">Design is code</a>, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
+        <div class="row pagedown add-top text-center">
+          <a class="scroll span12" href="#inbetween2">&#x25BC;</a>
+        </div>
+      </section>
+    </article>
+    <!-- / In between bits!
+    ================================================== -->
+
+
+
+
+
+
+
+
+
+    <!-- In between bits 2 - design is code!
+    ================================================== -->
+    <article id="inbetween2" class="subsection">
+      <section class="container">
+        <div class="row">
+          <h2 class="span8 offset2 bigquote">Design is code, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
         <div class="row pagedown add-top text-center">
           <a class="scroll span12" href="#logic">&#x25BC;</a>
         </div>
       </section>
     </article>
-    <!-- / In between bits!
+    <!-- / In between bits 2 - design is code!
     ================================================== -->
 
 
