tweaking centered text

--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
 
     <!-- In between bits!
     ================================================== -->
-    <article id="inbetween" class="subsection">
+    <article id="inbetween" class="subsection text-center">
       <section class="container">
         <div class="row">
-          <h1 class="bigquote jumbo text-center">design<span>#</span>code</h1>
-          <p class="lead text-center add-top">A system for developing breakthrough solutions in the form factor of services</p>
+          <h1 class="bigquote jumbo">design<span>#</span>code</h1>
+          <p class="lead add-top">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
-        <div class="row pagedown add-top text-center">
+        <div class="row pagedown add-top">
           <a class="scroll span12" href="#inbetween2">&#x25BC;</a>
         </div>
       </section>
@@ -219,12 +219,12 @@
 
     <!-- In between bits 2 - design is code!
     ================================================== -->
-    <article id="inbetween2" class="subsection">
+    <article id="inbetween2" class="subsection text-center">
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote">Design is code, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
-        <div class="row pagedown add-top text-center">
+        <div class="row pagedown add-top">
           <a class="scroll span12" href="#logic">&#x25BC;</a>
         </div>
       </section>
