--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <article id="inbetween2" class="subsection text-center">
       <section class="container">
         <div class="row">
-          <h2 class="span8 offset2 bigquote">Design is code, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
+          <h2 class="span8 offset2 bigquote">Design is code. <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
         <div class="row pagedown add-top">
           <a class="scroll span12" href="#logic">&#x25BC;</a>
