fixing a few things

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           <ul class="nav nav-pills pull-right">
 <!--             <li><a class="sometext"></a></li> -->
             <li class="active"><a class="scroll" href="#intro">O-P/E=N</a></li>
+            <li class="disabled"><a class="scroll" href="#inbetween"></a></li>
+            <li class="disabled"><a class="scroll" href="#inbetween2"></a></li>
             <li><a class="scroll" href="#logic">System</a></li>
             <li><a class="scroll" href="#stayinformed">Feedback</a></li>
           </ul>
@@ -198,8 +200,8 @@
     <article id="inbetween" class="subsection text-center">
       <section class="container">
         <div class="row">
-          <h1 class="bigquote jumbo">design<span>#</span>code</h1>
-          <p class="lead add-top">A system for developing breakthrough solutions in the form factor of services</p>
+          <h1 class="bigquote jumbo span12">design<span>#</span>code</h1>
+          <p class="lead add-top span8 offset2">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
         <div class="row pagedown add-top">
           <a class="scroll span12" href="#inbetween2">&#x25BC;</a>
@@ -222,7 +224,7 @@
     <article id="inbetween2" class="subsection text-center">
       <section class="container">
         <div class="row">
-          <h2 class="span8 offset2 bigquote">Design is code. <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
+          <h2 class="span8 offset2 jumbo bigquote"><span><a href="#logic" class="no-style scroll">Design is code.</a></span> <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
         <div class="row pagedown add-top">
           <a class="scroll span12" href="#logic">&#x25BC;</a>
