--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
               data-cycle-pager-template='<span class="minipostit"><a href=#> {{slideNum}} </a></span>'
               data-cycle-loop="1"
               data-cycle-allow-wrap="false"
+              data-cycle-prev=".prev"
+              data-cycle-next=".next"
               >
               
               <!-- SECTION 3 -->
@@ -372,7 +374,9 @@ encoding of business model and strategy.</p>
               <!-- END SECTION 7 -->
     
               <!-- PAGER @ THE BOTTOM -->
-              <div class="minipostit-pager span6 offset3"></div>
+              <div class="span1 offset2"><a href="#" class="prev">&laquo;</a></div>
+              <div class="minipostit-pager span6"></div>
+              <div class="span1"><a href="#" class="next">&raquo;</a></div>
             </div>
           </div>
         </div>
