remove JS sizing for inbetween areas

--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@ encoding of business model and strategy.</p>
               <!-- END SECTION 7 -->
     
               <!-- PAGER @ THE BOTTOM -->
-              <div class="span1 offset2"><a href="#" class="prev">&laquo;</a></div>
-              <div class="minipostit-pager span6"></div>
-              <div class="span1"><a href="#" class="next">&raquo;</a></div>
+              <div class="span1 offset3 ssbtn"><a href="#" class="prev">&laquo;</a></div>
+              <div class="minipostit-pager span4"></div>
+              <div class="span1 ssbtn"><a href="#" class="next">&raquo;</a></div>
             </div>
           </div>
         </div>
