--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="container">
         <div class="row">
           <!-column 1 -->
-          <div class="span4 columnss uno">
+          <div class="span4 columnss uno" >
             <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
@@ -86,7 +86,7 @@
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <!-- end SS declarations -->
-              <div class="slide">
+              <div class="slide" title="Click to Advance">
                 <img src="img/openasic.jpg"/>
                 <p class="indent intro text-center">This equation governs the value an entire class of goods;</p>
               </div>
@@ -104,7 +104,7 @@
               </div>
               <!-- pager! -->
 <!--               <div class="cycle-pager"></div> -->
-              <div class="minipostit-pager"></div>
+              <div class="minipostit-pager" title="Click to Advance"></div>
             </div>
           </div>
           <!-- /END COLUMN 1 -->
@@ -122,7 +122,7 @@
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
-              <div class="slide">
+              <div class="slide" title="Click to Advance">
                 <img src="img/openasic.jpg"/>
                 <p class="indent intro text-center">It determines success in delivering complex value propositions;</p>
               </div>
@@ -139,7 +139,7 @@
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>E = Quality of Experience</p>
               </div>
               <!-- pager! -->
-              <div class="minipostit-pager"></div>
+              <div class="minipostit-pager" title="Click to Advance"></div>
             </div>
           </div>
           <!-- /END COLUMN 2 -->
@@ -157,7 +157,7 @@
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
-              <div class="slide">
+              <div class="slide" title="Click to Advance">
                 <img src="img/openasic.jpg"/>
                 <p class="indent intro text-center">It shapes business strategy and government policy;</p>
               </div>
@@ -174,7 +174,7 @@
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
-              <div class="minipostit-pager"></div>
+              <div class="minipostit-pager" title="Click to Advance"></div>
             </div>
           </div>
           <!-- /END COLUMN 3 -->
@@ -375,7 +375,7 @@ encoding of business model and strategy.</p>
     
               <!-- PAGER @ THE BOTTOM -->
               <div class="span1 offset3 ssbtn"><a href="#" class="prev">&laquo;</a></div>
-              <div class="minipostit-pager span4"></div>
+              <div class="minipostit-pager span4" title="Click to Advance"></div>
               <div class="span1 ssbtn"><a href="#" class="next">&raquo;</a></div>
             </div>
           </div>
