remove page bounce

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <!-- end SS declarations -->
               <div class="slide" title="Click to Advance">
                 <img src="img/openasic.jpg"/>
-                <p class="indent intro text-center">This equation governs the value an entire class of goods;</p>
+                <p class="indent intro text-center">This equation governs the value of an entire class of goods;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
