fixing green slide links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
-              data-cycle-next="> div.slide"
+              data-cycle-next="> div.slide .advance"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
@@ -86,20 +86,20 @@
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <!-- end SS declarations -->
-              <div class="slide" title="Click to Advance">
-                <img src="img/openasic.jpg"/>
+              <div class="slide " title="Click to Advance">
+                <img class="advance" src="img/openasic.jpg"/>
                 <p class="indent intro text-center">This equation governs the value of an entire class of goods;</p>
               </div>
               <div class="slide">
-                <div class="purplebg postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
+                <div class="purplebg advance postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
                 <p class="indent">Beyond the obvious and superficial, when customers pay for a service, they pay for particular outcomes. <br/><br/>They pay for &ldquo;goods.&rdquo;</p>
               </div>
               <div class="slide">
-                <div class="bluebg postit"><p class="lead bottomalign">The value is from having those &ldquo;goods&rdquo; guaranteed within particular places, times and platforms.</p></div>
+                <div class="bluebg advance postit"><p class="lead bottomalign">The value is from having those &ldquo;goods&rdquo; guaranteed within particular places, times and platforms.</p></div>
                 <p class="indent">Outcomes are the &ldquo;goods&rdquo; and experience is the &ldquo;packaging.&rdquo; <br/><br/>Post-industrial goods, or PIGS, in the form-factor of experience.</p>
               </div>
               <div class="slide">
-                <div class="greenbg postit"><p class="lead bottomalign">Affected gains and avoided losses from the rendering of a customer asset, or the renting of a resource.</p></div>
+                <a class=" invsbl" href="#inbetween"><div class="greenbg postit"><p class="lead bottomalign">Affected gains and avoided losses from the rendering of a customer asset, or the renting of a resource.</p></div></a>
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>O = Quality of Outcomes</p>
               </div>
               <!-- pager! -->
@@ -114,7 +114,7 @@
             <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
-              data-cycle-next="> div.slide"
+              data-cycle-next="> div.slide .advance"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
@@ -123,19 +123,19 @@
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <div class="slide" title="Click to Advance">
-                <img src="img/openasic.jpg"/>
+                <img class="advance" src="img/openasic.jpg"/>
                 <p class="indent intro text-center">It determines success in delivering complex value propositions;</p>
               </div>
               <div class="slide">
-                <div class="purplebg postit"><p class="lead bottomalign">Why do some succeed where others fail?</p></div>
+                <div class="purplebg advance postit"><p class="lead bottomalign">Why do some succeed where others fail?</p></div>
                 <p class="indent">What gives some service providers immunity from challengers? <br/><br/>What gives some challengers the impunity to take on establishments?</p>
               </div>
               <div class="slide">
-                <div class="bluebg postit"><p class="lead bottomalign">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p></div>
+                <div class="bluebg advance postit"><p class="lead bottomalign">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p></div>
                 <p class="indent">Superior design provides an unfair advantage they fully exploit. <br/><br/>Think of design as genetic code.</p>
               </div>
               <div class="slide">
-                <div class="greenbg postit"><p class="lead bottomalign">They not only deliver a superior quality of outcomes, but also package and deliver them with a superior quality of experience.</p></div>
+                <a class=" invsbl" href="#inbetween"><div class="greenbg postit"><p class="lead bottomalign">They not only deliver a superior quality of outcomes, but also package and deliver them with a superior quality of experience.</p></div></a>
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>E = Quality of Experience</p>
               </div>
               <!-- pager! -->
@@ -149,7 +149,7 @@
             <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
-              data-cycle-next="> div.slide"
+              data-cycle-next="> div.slide .advance"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
@@ -158,19 +158,19 @@
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <div class="slide" title="Click to Advance">
-                <img src="img/openasic.jpg"/>
+                <img class="advance" src="img/openasic.jpg"/>
                 <p class="indent intro text-center">It shapes business strategy and government policy;</p>
               </div>
               <div class="slide">
-                <div class="purplebg postit"><p class="lead bottomalign">The business model is pitch perfect and the strategy is sound. <br/><br/>Government policy is clear about about what’s best in the public interest.</p></div>
+                <div class="purplebg advance postit"><p class="lead bottomalign">The business model is pitch perfect and the strategy is sound. <br/><br/>Government policy is clear about about what’s best in the public interest.</p></div>
                 <p class="indent">How do you make sure policy and strategy won’t fall flat in implementation and operation?</p>
               </div>
               <div class="slide">
-                <div class="bluebg postit"><p class="lead bottomalign">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p></div>
+                <div class="bluebg advance postit"><p class="lead bottomalign">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p></div>
                 <p class="indent">Design is an expression of policy and strategy in the form of a code. <br/><br/>Think of design as software code.</p>
               </div>
               <div class="slide">
-                <div class="greenbg postit"><p class="lead bottomalign">Good design reduces the risk the expected value fails to materialize. <br/><br/>Great design delivers superior outcomes and experiences at a much lower cost.</p></div>
+                <a class=" invsbl" href="#inbetween"><div class="greenbg postit"><p class="lead bottomalign">Good design reduces the risk the expected value fails to materialize. <br/><br/>Great design delivers superior outcomes and experiences at a much lower cost.</p></div></a>
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
