fixing title of important diagram slide

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ encoding of business model and strategy.</p>
           <div class="span12 measure">
             <div class="row toprow">
               <img class="span12" src="img/dsp-d.png" alt="Explanatory image of D#C signal processing"/>
-              <h3 class="span12 text-center">Design Signal Processing&trade;</h3>
+              <h3 class="span12 text-center">Design as code, in the native language of business<span class="light">&trade;</span></h3>
               <p class="span12 text-center small">(patent-pending)</p>
             </div>
           </div>
