cleaning up CSS, removing unneeded JS

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <!-- /END COLUMN 3 -->
         </div>
         <div class="row pagedown add-top text-center">
-          <a class="scroll span12" href="#dhashc">&#x25BC;</a>
+          <a class="scroll span12" href="#dhashc" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -204,8 +204,8 @@
           <p class="lead add-top span8 offset2">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
         <div class="row pagedown add-top">
-          <a class="scroll span12" href="#open">&#x25B2;</a>
-          <a class="scroll span12" href="#designiscode">&#x25BC;</a>
+          <a class="scroll span12" href="#open" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#designiscode" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -228,8 +228,8 @@
           <h2 class="span8 offset2 jumbo bigquote"><span><a href="#system" class="no-style scroll">Design is code.</a></span> <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
         <div class="row pagedown add-top">
-          <a class="scroll span12" href="#dhashc">&#x25B2;</a>
-          <a class="scroll span12" href="#system">&#x25BC;</a>
+          <a class="scroll span12" href="#dhashc" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#system" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -271,8 +271,8 @@
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#designiscode">&#x25B2;</a>
-          <a class="scroll span12" href="#simplicitysophistication">&#x25BC;</a>
+          <a class="scroll span12" href="#designiscode" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#simplicitysophistication" title="next">&#x25BC;</a>
         </div>
       </section>
       <!-- END logic basics -->
@@ -301,8 +301,8 @@
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#everybodycancode">&#x25B2;</a>
-          <a class="scroll span12" href="#gooddesignfast">&#x25BC;</a>
+          <a class="scroll span12" href="#everybodycancode" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#gooddesignfast" title="next">&#x25BC;</a>
         </div>
       </section>
       <!-- END Arguments and perspectives -->
@@ -333,8 +333,8 @@ encoding of business model and strategy.</p>
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#simplicitysophistication">&#x25B2;</a>
-          <a class="scroll span12" href="#raisingthebar">&#x25BC;</a>
+          <a class="scroll span12" href="#simplicitysophistication" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#raisingthebar" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Canvases / Good Design Fast -->
@@ -363,7 +363,7 @@ encoding of business model and strategy.</p>
         </div>
         <div class="row pagedown text-center">
           <a class="scroll span12" href="#gooddesignfast">&#x25B2;</a>
-          <a class="scroll span12" href="#tk-bigdiagram">&#x25BC;</a>
+          <a class="scroll span12" href="#tk-bigdiagram" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Canvases / Closeup / Examine the logic threads -->
@@ -380,8 +380,8 @@ encoding of business model and strategy.</p>
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#raisingthebar">&#x25B2;</a>
-          <a class="scroll span12" href="#stayinformed">&#x25BC;</a>
+          <a class="scroll span12" href="#raisingthebar" title="previous">&#x25B2;</a>
+          <a class="scroll span12" href="#stayinformed" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Giant Explanation image -->
@@ -468,7 +468,7 @@ encoding of business model and strategy.</p>
 
         </div>
         <div class="row pagedown add-top text-center">
-          <a class="scroll span12" href="#tk-bigdiagram">&#x25B2;</a>
+          <a class="scroll span12" href="#tk-bigdiagram" title="previous">&#x25B2;</a>
         </div>
       </section>
     </article>
@@ -516,8 +516,7 @@ encoding of business model and strategy.</p>
 
 
     <!--
-    This site was built by Kristian Bjornard @ http://www.ookb.co/
-    built with help from Twitter Bootstrap v2.3.2 (http://getbootstrap.com/2.3.2/), jQuery Cycle2 (http://jquery.malsup.com/cycle2/), and holes filled in with custom HTML, CSS, and JS magic.
+    This site was built with help from Twitter Bootstrap v2.3.2 (http://getbootstrap.com/2.3.2/), and holes filled in with custom HTML, CSS, and JS by Kristian Bjornard @ http://www.ookb.co/.
     All graphics are copyright© design#code llc.
     -->
 
