nearly there getting this.hash to work...

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
         <div class="row pagedown add-top">
           <a class="scroll span12" href="#dhashc" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#system" title="next">&#x25BC;</a>
+          <a class="scroll span12" href="#everybodycancode" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
