tweaking pagetop link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="pagetop">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Design#Code &bull; A system for developing breakthrough solutions in the form factor of services</title>
@@ -50,7 +50,7 @@
             <li><a class="scroll" href="#system">System</a></li>
             <li><a class="scroll" href="#stayinformed">Feedback</a></li>
           </ul>
-          <h1 class="muted"><a class="scroll muted" href="#pagetop">design<span>#</span>code</a></h1>
+          <h1 class="muted"><a class="scroll muted" href="#open">design<span>#</span>code</a></h1>
         </nav>
       </div>
     </header> <!-- /container -->
