trial and error

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li class="disabled"><a class="scroll" href="#dhashc"></a></li>
             <li class="disabled"><a class="scroll" href="#designiscode"></a></li>
             <li><a class="scroll" href="#system">System</a></li>
-            <li><a class="scroll" href="#stayinformed">Feedback</a></li>
+            <li><a class="scroll" href="#feedback">Feedback</a></li>
           </ul>
           <h1 class="muted"><a class="scroll muted" href="#open">design<span>#</span>code</a></h1>
         </nav>
@@ -180,7 +180,7 @@
           <!-- /END COLUMN 3 -->
         </div>
         <div class="row pagedown add-top text-center">
-          <a class="scroll span12" href="#dhashc" title="next">&#x25BC;</a>
+          <a class="scroll span12 next" href="#dhashc" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -204,8 +204,8 @@
           <p class="lead add-top span8 offset2">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
         <div class="row pagedown add-top">
-          <a class="scroll span12" href="#open" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#designiscode" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#open" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#designiscode" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -228,8 +228,8 @@
           <h2 class="span8 offset2 jumbo bigquote"><span><a href="#system" class="no-style scroll">Design is code.</a></span> <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
         <div class="row pagedown add-top">
-          <a class="scroll span12" href="#dhashc" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#everybodycancode" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#dhashc" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#everybodycancode" title="next">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -271,8 +271,8 @@
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#designiscode" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#simplicitysophistication" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#designiscode" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#simplicitysophistication" title="next">&#x25BC;</a>
         </div>
       </section>
       <!-- END logic basics -->
@@ -301,8 +301,8 @@
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#everybodycancode" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#gooddesignfast" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#everybodycancode" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#gooddesignfast" title="next">&#x25BC;</a>
         </div>
       </section>
       <!-- END Arguments and perspectives -->
@@ -333,8 +333,8 @@ encoding of business model and strategy.</p>
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#simplicitysophistication" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#raisingthebar" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#simplicitysophistication" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#raisingthebar" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Canvases / Good Design Fast -->
@@ -362,14 +362,14 @@ encoding of business model and strategy.</p>
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#gooddesignfast">&#x25B2;</a>
-          <a class="scroll span12" href="#tk-bigdiagram" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#gooddesignfast">&#x25B2;</a>
+          <a class="scroll span12 next" href="#designascode" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Canvases / Closeup / Examine the logic threads -->
           
           <!-- Giant Explanation image -->
-      <section class="container" id="tk-bigdiagram">
+      <section class="container" id="designascode">
         <div class="row">
           <div class="span12 measure">
             <div class="row toprow">
@@ -380,8 +380,8 @@ encoding of business model and strategy.</p>
           </div>
         </div>
         <div class="row pagedown text-center">
-          <a class="scroll span12" href="#raisingthebar" title="previous">&#x25B2;</a>
-          <a class="scroll span12" href="#stayinformed" title="next">&#x25BC;</a>
+          <a class="scroll span12 prev" href="#raisingthebar" title="previous">&#x25B2;</a>
+          <a class="scroll span12 next" href="#feedback" title="next">&#x25BC;</a>
         </div>
       </section>
           <!-- END Giant Explanation image -->
@@ -401,7 +401,7 @@ encoding of business model and strategy.</p>
 
     <!-- Email Capture!
     ================================================== -->
-    <article id="stayinformed" class="subsection text-center">
+    <article id="feedback" class="subsection text-center">
       <section class="container">
         <div class="row toprow">
         
@@ -468,7 +468,7 @@ encoding of business model and strategy.</p>
 
         </div>
         <div class="row pagedown add-top text-center">
-          <a class="scroll span12" href="#tk-bigdiagram" title="previous">&#x25B2;</a>
+          <a class="scroll span12 prev" href="#designascode" title="previous">&#x25B2;</a>
         </div>
       </section>
     </article>
