--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
           <ul class="nav nav-pills pull-right">
 <!--             <li><a class="sometext"></a></li> -->
             <li class="active"><a class="scroll" href="#open">O-P/E=N</a></li>
-            <li class="disabled"><a class="scroll" href="#dhashc"></a></li>
-            <li class="disabled"><a class="scroll" href="#designiscode"></a></li>
             <li><a class="scroll" href="#system">System</a></li>
             <li><a class="scroll" href="#feedback">Feedback</a></li>
           </ul>
@@ -69,8 +67,8 @@
 
     <!-- Intro!
     ================================================== -->
-    <article id="open" class="subsection">
-      <section class="container">
+    <article class="subsection">
+      <section class="container" id="open">
         <div class="row">
           <!-column 1 -->
           <div class="span4 columnss uno" >
@@ -197,8 +195,8 @@
 
     <!-- In between bits!
     ================================================== -->
-    <article id="dhashc" class="subsection text-center">
-      <section class="container">
+    <article class="subsection text-center">
+      <section class="container" id="dhashc">
         <div class="row">
           <h1 class="bigquote jumbo span12">design<span>#</span>code</h1>
           <p class="lead add-top span8 offset2">A system for developing breakthrough solutions in the form factor of services</p>
@@ -222,8 +220,8 @@
 
     <!-- In between bits 2 - design is code!
     ================================================== -->
-    <article id="designiscode" class="subsection text-center">
-      <section class="container">
+    <article class="subsection text-center">
+      <section class="container" id="designiscode">
         <div class="row">
           <h2 class="span8 offset2 jumbo bigquote"><span><a href="#system" class="no-style scroll">Design is code.</a></span> <br/>The “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
@@ -400,8 +398,8 @@ encoding of business model and strategy.</p>
 
     <!-- Email Capture!
     ================================================== -->
-    <article id="feedback" class="subsection text-center">
-      <section class="container">
+    <article class="subsection text-center">
+      <section class="container" id="feedback">
         <div class="row toprow">
         
           <!-- TALENT -->
@@ -470,30 +468,18 @@ encoding of business model and strategy.</p>
           <a class="scroll span12 prev" href="#designascode" title="previous">&#x25B2;</a>
         </div>
       </section>
+
+
+      <!-- Footer!
+      ================================================== -->
+      <footer class="container">
+        <p class="pull-right"><small>&copy;2013 design#code LLC</small></p>
+      </footer>
+
+
     </article>
     <!-- / Email Capture!
     ================================================== -->
-
-
-
-
-
-
-
-
-
-    <!-- Footer!
-    ================================================== -->
-    <footer class="container">
-      <p class="pull-right"><small>&copy;2013 design#code LLC</small></p>
-    </footer>
-
-
-
-
-
-
-
 
 
     <!-- Le javascript
@@ -502,16 +488,10 @@ encoding of business model and strategy.</p>
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/jquery.cycle2.min.js"></script>
     
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
-
-
-
-
-
-
-
 
 
     <!--
