ORATOR font-face stuff

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="scroll" href="#system">System</a></li>
             <li><a class="scroll" href="#feedback">Feedback</a></li>
           </ul>
-          <h1 class="muted"><a class="scroll muted" href="#open">design<span>#</span>code</a></h1>
+          <h1 class="muted"><a class="scroll muted orator" href="#open">design<span>#</span>code</a></h1>
         </nav>
       </div>
     </header> <!-- /container -->
@@ -198,7 +198,7 @@
     <article class="subsection text-center">
       <section class="container" id="dhashc">
         <div class="row">
-          <h1 class="bigquote jumbo span12">design<span>#</span>code</h1>
+          <h1 class="bigquote jumbo span12 orator">design<span>#</span>code</h1>
           <p class="lead add-top span8 offset2">A system for developing breakthrough solutions in the form factor of services</p>
         </div>
         <div class="row pagedown add-top">
@@ -473,7 +473,7 @@ encoding of business model and strategy.</p>
       <!-- Footer!
       ================================================== -->
       <footer class="container">
-        <p class="pull-right"><small>&copy;2013 design#code LLC</small></p>
+        <p class="pull-right orator"><small>&copy;2013 design#code LLC</small></p>
       </footer>
 
 
